crates/fleet-server/tests/snapshots/middleware__error_payload_too_large_by_length.snap
---
source: crates/fleet-server/tests/middleware.rs
expression: redacted(seen)
---
{
  "status": 413,
  "headers": {
    "cache-control": "no-store",
    "content-length": "133",
    "content-security-policy": "default-src 'none'; frame-ancestors 'none'",
    "content-type": "application/json",
    "referrer-policy": "no-referrer",
    "x-content-type-options": "nosniff",
    "x-frame-options": "DENY",
    "x-request-id": "[request_id]"
  },
  "body": {
    "error": {
      "code": "payload_too_large",
      "message": "The request body is too large.",
      "request_id": "[request_id]"
    }
  }
}
