crates/fleet-server/tests/snapshots/middleware__error_timeout.snap
---
source: crates/fleet-server/tests/middleware.rs
expression: redacted(seen)
---
{
  "status": 408,
  "headers": {
    "cache-control": "no-store",
    "content-length": "119",
    "content-security-policy": "default-src 'none'; frame-ancestors 'none'",
    "content-type": "application/json",
    "referrer-policy": "no-referrer",
    "x-content-type-options": "nosniff",
    "x-frame-options": "DENY",
    "x-request-id": "[request_id]"
  },
  "body": {
    "error": {
      "code": "timeout",
      "message": "The request took too long.",
      "request_id": "[request_id]"
    }
  }
}
